src/styles/projects.css
.projects-parent-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.project-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.projects-title {
  font-size: 1.75rem;
  color: #EC6164;
}

.project-lift-gif {
  display: flex;
  margin: auto;
  padding-bottom: 1rem;
}

.project-baked-gif {
  display: flex;
  margin: auto;
  width: 20rem;
  padding-bottom: 1rem;
}

.list {
  display: flex;
  flex-direction: column;
}

.list p {
  display: flex;
  line-height: 1.5;
} 

.button-container {
  display: flex;
  justify-content: center;
  gap: 2rem;
  padding: 2rem;
}

.a-button {
  text-align: center;
  text-decoration: none;
  border-radius: 25px;
  background: black;
  font-size: 0.8rem;
  border: none;
  height: 2.5rem;
  width: 10rem;
  padding-top: 0.85rem;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15), 0px 4px 4px rgba(0, 0, 0, 0.01);
  font-weight: 600;
  color: white;
}

